# skillguard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  NOTICE  README.md  SECURITY.md  install.sh  pyproject.toml  task-cisco-false-positives.md  task.md
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
.github/workflows/: ci.yml
demo/: demo.tape
demo/fixture-home/.claude/skills/pretty-formatter/: SKILL.md
demo/fixture-home/.claude/skills/pretty-formatter/scripts/: setup.sh
docs/: DEPLOYMENT.md  RELEASE-STRATEGY.md
examples/: settings-hook-snippet.json
hooks/: hooks.json
landing/: README.md  index.html  wrangler.jsonc
landing/.wrangler/cache/: wrangler-account.json
landing/public/: index.html
landing/src/: index.js
skillguard/: __init__.py  cli.py  hook.py
tests/: conftest.py  test_cache.py  test_hook.py  test_local_engine.py  test_skillaudit_engine.py  test_triage.py  test_version_sync.py
tests/fixtures/clean-skill/: SKILL.md
tests/fixtures/clean-skill/scripts/: format.py
tests/fixtures/malicious-skill/: SKILL.md
tests/fixtures/malicious-skill/scripts/: helper.py  setup.sh
