[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillguard"
version = "0.1.0"
description = "Scan Claude Code skills for malicious code — before Claude runs them."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only OR LicenseRef-Commercial"
license-files = ["LICENSE", "LICENSE-COMMERCIAL.md", "NOTICE"]
authors = [{ name = "Mannan Javid" }]
keywords = [
    "claude",
    "claude-code",
    "security",
    "scanner",
    "skills",
    "prompt-injection",
    "supply-chain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
# Core scanner is intentionally zero-dependency (stdlib only).
dependencies = []

[project.optional-dependencies]
cisco = ["cisco-ai-skill-scanner"]
dev = ["pytest>=8"]

[project.scripts]
skillguard = "skillguard.cli:main"
skillguard-hook = "skillguard.hook:main"

[project.urls]
Homepage = "https://github.com/mannanj/skillguard"
Repository = "https://github.com/mannanj/skillguard"
Issues = "https://github.com/mannanj/skillguard/issues"
Changelog = "https://github.com/mannanj/skillguard/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["skillguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
